@@ -8,6 +8,8 @@ NetGrowler 0.2.3 (released 18 Aug 2007)
 
 * New icons from Jeremy Cutler <cutler@eecg.toronto.edu>.
 
+* Remove hardcoded interface names, also thanks to
+  Jeremy Cutler <cutler@eecg.toronto.edu>.
 
 NetGrowler 0.2.2 (released 13 May 2005)
 ----------------
